--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -211,7 +211,7 @@ jobs:
           cp ./obs-studio/build64/plugins/obs-rtspserver/obs-rtspserver.so ./build-package/obs-plugins/64bit/
           cp -r ./obs-studio/plugins/obs-rtspserver/data/* ./build-package/data/obs-plugins/obs-rtspserver/
           mkdir release
-          tar zcvf "./release/${{ env.LINUX_FILENAME }}.tar.gz" "./build-package"
+          tar zcvf "./release/${{ env.LINUX_FILENAME }}.tar.gz" "./build-package/*"
       - name: 'Publish ${{ env.LINUX_FILENAME }}.tar.gz'
         if: success()
         uses: actions/upload-artifact@v2-preview
