--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -181,7 +181,7 @@ jobs:
         run: |
           mkdir ./build32
           cd ./build32
-          cmake -d CMAKE_CXX_FLAGS=-m32 -d CMAKE_C_FLAGS=-m32 -DUNIX_STRUCTURE=1 -DCMAKE_INSTALL_PREFIX=/usr ..
+          cmake -D CMAKE_CXX_FLAGS=-m32 -D CMAKE_C_FLAGS=-m32 -DUNIX_STRUCTURE=1 -DCMAKE_INSTALL_PREFIX=/usr ..
       - name: 'Build obs-rtspserver 32-bit'
         working-directory: ${{ github.workspace }}/obs-studio/build32/plugins/obs-rtspserver/
         run: |
@@ -191,7 +191,7 @@ jobs:
         run: |
           mkdir ./build64
           cd ./build64
-          cmake -d CMAKE_CXX_FLAGS=-m64 -d CMAKE_C_FLAGS=-m64 -DUNIX_STRUCTURE=1 -DCMAKE_INSTALL_PREFIX=/usr ..
+          cmake -D CMAKE_CXX_FLAGS=-m64 -D CMAKE_C_FLAGS=-m64 -DUNIX_STRUCTURE=1 -DCMAKE_INSTALL_PREFIX=/usr ..
       - name: 'Build obs-rtspserver 64-bit'
         working-directory: ${{ github.workspace }}/obs-studio/build64/plugins/obs-rtspserver/
         run: |
