--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -139,7 +139,14 @@ jobs:
            libvlc-dev libx11-dev libx264-dev libxcb-shm0-dev libxcb-xinerama0-dev libxcomposite-dev \
            libxinerama-dev pkg-config python3-dev qtbase5-dev libqt5svg5-dev swig libxcb-randr0-dev \
            libxcb-xfixes0-dev libx11-xcb-dev libxcb1-dev \
-           libx32gcc-4.8-dev libc6-dev-i386 lib32stdc++6 g++-multilib
+           libx32gcc-4.8-dev libc6-dev-i386 lib32stdc++6 g++-multilib gcc-multilib \
+           libmbedtls-dev:i386 libasound2-dev:i386 libavcodec-dev:i386 libavdevice-dev:i386 \
+           libavfilter-dev:i386 libavformat-dev:i386 libavutil-dev:i386 libcurl4-openssl-dev:i386 libfdk-aac-dev:i386 libfontconfig-dev:i386 \
+           libfreetype6-dev:i386 libgl1-mesa-dev:i386 libjack-jackd2-dev:i386 libjansson-dev libluajit-5.1-dev:i386 libpulse-dev:i386 \
+           libqt5x11extras5-dev:i386 libspeexdsp-dev:i386 libswresample-dev:i386 libswscale-dev:i386 libudev-dev:i386 libv4l-dev:i386 \
+           libvlc-dev:i386 libx11-dev:i386 libx264-dev:i386 libxcb-shm0-dev:i386 libxcb-xinerama0-dev:i386 libxcomposite-dev:i386 \
+           libxinerama-dev:i386 python3-dev:i386 qtbase5-dev:i386 libqt5svg5-dev:i386 libxcb-randr0-dev:i386 \
+           libxcb-xfixes0-dev:i386 libx11-xcb-dev:i386 libxcb1-dev:i386 \
       - name: 'Checkout OBS'
         uses: actions/checkout@v2
         with:
