--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -146,7 +146,7 @@ jobs:
            libqt5x11extras5-dev:i386 libspeexdsp-dev:i386 libswresample-dev:i386 libswscale-dev:i386 libudev-dev:i386 libv4l-dev:i386 \
            libvlc-dev:i386 libx11-dev:i386 libx264-dev:i386 libxcb-shm0-dev:i386 libxcb-xinerama0-dev:i386 libxcomposite-dev:i386 \
            libxinerama-dev:i386 python3-dev:i386 qtbase5-dev:i386 libqt5svg5-dev:i386 libxcb-randr0-dev:i386 \
-           libxcb-xfixes0-dev:i386 libx11-xcb-dev:i386 libxcb1-dev:i386 \
+           libxcb-xfixes0-dev:i386 libx11-xcb-dev:i386 libxcb1-dev:i386
       - name: 'Checkout OBS'
         uses: actions/checkout@v2
         with:
