--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -124,29 +124,30 @@ jobs:
           path: ${{ github.workspace }}\build-package\*.exe
 
   linux:
-    name: 'Linux 32+64bit'
+    name: 'Linux 64bit'
     runs-on: [ubuntu-latest]
     steps:
       - name: 'Install prerequisite'
+#       run: |
+#         sudo dpkg --add-architecture i386
         run: |
-         sudo dpkg --add-architecture i386
-         sudo apt-get update
-         sudo apt-get install \
+          sudo apt-get update
+          sudo apt-get install \
            build-essential checkinstall cmake git libmbedtls-dev libasound2-dev libavcodec-dev libavdevice-dev \
            libavfilter-dev libavformat-dev libavutil-dev libcurl4-openssl-dev libfdk-aac-dev libfontconfig-dev \
            libfreetype6-dev libgl1-mesa-dev libjack-jackd2-dev libjansson-dev libluajit-5.1-dev libpulse-dev \
            libqt5x11extras5-dev libspeexdsp-dev libswresample-dev libswscale-dev libudev-dev libv4l-dev \
            libvlc-dev libx11-dev libx264-dev libxcb-shm0-dev libxcb-xinerama0-dev libxcomposite-dev \
            libxinerama-dev pkg-config python3-dev qtbase5-dev libqt5svg5-dev swig libxcb-randr0-dev \
-           libxcb-xfixes0-dev libx11-xcb-dev libxcb1-dev \
-           libx32gcc-4.8-dev libc6-dev-i386 lib32stdc++6 g++-multilib gcc-multilib \
-           libmbedtls-dev:i386 libasound2-dev:i386 libavcodec-dev:i386 libavdevice-dev:i386 \
-           libavfilter-dev:i386 libavformat-dev:i386 libavutil-dev:i386 libcurl4-openssl-dev:i386 libfdk-aac-dev:i386 libfontconfig-dev:i386 \
-           libfreetype6-dev:i386 libgl1-mesa-dev:i386 libjack-jackd2-dev:i386 libjansson-dev libluajit-5.1-dev:i386 libpulse-dev:i386 \
-           libqt5x11extras5-dev:i386 libspeexdsp-dev:i386 libswresample-dev:i386 libswscale-dev:i386 libudev-dev:i386 libv4l-dev:i386 \
-           libvlc-dev:i386 libx11-dev:i386 libx264-dev:i386 libxcb-shm0-dev:i386 libxcb-xinerama0-dev:i386 libxcomposite-dev:i386 \
-           libxinerama-dev:i386 qtbase5-dev:i386 libqt5svg5-dev:i386 libxcb-randr0-dev:i386 \
-           libxcb-xfixes0-dev:i386 libx11-xcb-dev:i386 libxcb1-dev:i386
+#           libxcb-xfixes0-dev libx11-xcb-dev libxcb1-dev \
+#           libx32gcc-4.8-dev libc6-dev-i386 lib32stdc++6 g++-multilib gcc-multilib \
+#           libmbedtls-dev:i386 libasound2-dev:i386 libavcodec-dev:i386 libavdevice-dev:i386 \
+#           libavfilter-dev:i386 libavformat-dev:i386 libavutil-dev:i386 libcurl4-openssl-dev:i386 libfdk-aac-dev:i386 libfontconfig-dev:i386 \
+#           libfreetype6-dev:i386 libgl1-mesa-dev:i386 libjack-jackd2-dev:i386 libjansson-dev libluajit-5.1-dev:i386 libpulse-dev:i386 \
+#           libqt5x11extras5-dev:i386 libspeexdsp-dev:i386 libswresample-dev:i386 libswscale-dev:i386 libudev-dev:i386 libv4l-dev:i386 \
+#           libvlc-dev:i386 libx11-dev:i386 libx264-dev:i386 libxcb-shm0-dev:i386 libxcb-xinerama0-dev:i386 libxcomposite-dev:i386 \
+#           libxinerama-dev:i386 qtbase5-dev:i386 libqt5svg5-dev:i386 libxcb-randr0-dev:i386 \
+#           libxcb-xfixes0-dev:i386 libx11-xcb-dev:i386 libxcb1-dev:i386
       - name: 'Checkout OBS'
         uses: actions/checkout@v2
         with:
@@ -185,22 +186,22 @@ jobs:
       - name: 'Add obs-rtspserver Subdirectory'
         working-directory: ${{ github.workspace }}/obs-studio/plugins
         run: echo "add_subdirectory(obs-rtspserver)" >> ./CMakeLists.txt
-      - name: 'Configure OBS 32-bit'
-        working-directory: ${{ github.workspace }}/obs-studio
-        run: |
-          mkdir ./build32
-          cd ./build32
-          cmake -D CMAKE_CXX_FLAGS=-m32 -D CMAKE_C_FLAGS=-m32 -DUNIX_STRUCTURE=1 -DCMAKE_INSTALL_PREFIX=/usr ..
-      - name: 'Build obs-rtspserver 32-bit'
-        working-directory: ${{ github.workspace }}/obs-studio/build32/plugins/obs-rtspserver/
-        run: |
-          make -j4
+#      - name: 'Configure OBS 32-bit'
+#        working-directory: ${{ github.workspace }}/obs-studio
+#        run: |
+#          mkdir ./build32
+#          cd ./build32
+#          cmake -D CMAKE_CXX_FLAGS=-m32 -D CMAKE_C_FLAGS=-m32 -DUNIX_STRUCTURE=1 -DCMAKE_INSTALL_PREFIX=/usr ..
+#      - name: 'Build obs-rtspserver 32-bit'
+#        working-directory: ${{ github.workspace }}/obs-studio/build32/plugins/obs-rtspserver/
+#        run: |
+#          make -j4
       - name: 'Configure OBS 64-bit'
         working-directory: ${{ github.workspace }}/obs-studio
         run: |
           mkdir ./build64
           cd ./build64
-          cmake -D CMAKE_CXX_FLAGS=-m64 -D CMAKE_C_FLAGS=-m64 -DUNIX_STRUCTURE=1 -DCMAKE_INSTALL_PREFIX=/usr ..
+          cmake -D -DUNIX_STRUCTURE=1 -DCMAKE_INSTALL_PREFIX=/usr ..
       - name: 'Build obs-rtspserver 64-bit'
         working-directory: ${{ github.workspace }}/obs-studio/build64/plugins/obs-rtspserver/
         run: |
@@ -212,11 +213,8 @@ jobs:
           echo "::set-env name=LINUX_FILENAME::$FILENAME"
       - name: 'Package obs-rtspserver'
         working-directory: ${{ github.workspace }}
-        run: |
-          mkdir -p build-package/obs-plugins/32bit
           mkdir -p build-package/obs-plugins/64bit
           mkdir -p build-package/data/obs-plugins/obs-rtspserver/locale/
-          cp ./obs-studio/build32/plugins/obs-rtspserver/obs-rtspserver.so ./build-package/obs-plugins/32bit/
           cp ./obs-studio/build64/plugins/obs-rtspserver/obs-rtspserver.so ./build-package/obs-plugins/64bit/
           cp -r ./obs-studio/plugins/obs-rtspserver/data/* ./build-package/data/obs-plugins/obs-rtspserver/
           mkdir release
@@ -227,11 +225,90 @@ jobs:
         with:
           name: '${{ env.GIT_TAG }}-linux'
           path: ${{ github.workspace }}/release/*.tar.gz
-
+          
+  macos:  
+    name: 'Mac OS 64bit'
+    runs-on: [macos-latest]
+    steps:
+      - name: 'Install brew'
+        run: /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/master/install.sh)"
+      - name: 'Install prerequisite'
+        run: |
+            brew install ffmpeg x264 qt5
+            brew linkapps qt5
+            export CMAKE_PREFIX_PATH=/usr/local/opt/qt5
+      - name: 'Checkout OBS'
+        uses: actions/checkout@v2
+        with:
+          repository: obsproject/obs-studio
+          path: ${{ github.workspace }}/obs-studio
+          submodules: 'recursive'
+      - name: 'Get OBS-Studio git info'
+        shell: bash
+        working-directory: ${{ github.workspace }}/obs-studio
+        run: |
+          git fetch --prune --unshallow
+          echo ::set-env name=OBS_GIT_BRANCH::$(git rev-parse --abbrev-ref HEAD)
+          echo ::set-env name=OBS_GIT_HASH::$(git rev-parse --short HEAD)
+          echo ::set-env name=OBS_GIT_TAG::$(git describe --tags --abbrev=0)
+      - name: 'Checkout last OBS-Studio release (${{ env.OBS_GIT_TAG }})'
+        shell: bash
+        working-directory: ${{ github.workspace }}/obs-studio
+        run: |
+          git checkout ${{ env.OBS_GIT_TAG }}
+          git submodule update
+      - name: 'Checkout obs-rtspserver'
+        uses: actions/checkout@v2
+        with:
+          path: ${{ github.workspace }}/obs-studio/plugins/obs-rtspserver
+          submodules: 'recursive'
+      - name: 'Get obs-rtspserver tag'
+        shell: bash
+        run: |
+          echo ::set-env name=GIT_TAG::${GITHUB_REF/refs\/tags\//}
+      - name: 'Checkout obs-rtspserver release (${{ env.GIT_TAG }})'
+        shell: bash
+        working-directory: ${{ github.workspace }}/obs-studio/plugins/obs-rtspserver
+        run: |
+          git checkout ${{ env.GIT_TAG }}
+          git submodule update
+      - name: 'Add obs-rtspserver Subdirectory'
+        working-directory: ${{ github.workspace }}/obs-studio/plugins
+        run: echo "add_subdirectory(obs-rtspserver)" >> ./CMakeLists.txt
+      - name: 'Configure OBS 64-bit'
+        working-directory: ${{ github.workspace }}/obs-studio
+        run: |
+          mkdir ./build64
+          cd ./build64
+          cmake ..
+      - name: 'Build obs-rtspserver 64-bit'
+        working-directory: ${{ github.workspace }}/obs-studio/build64/plugins/obs-rtspserver/
+        run: |
+          make -j4
+      - name: 'Set release filename'
+        shell: bash
+        run: |
+          FILENAME="obs-rtspserver-${{ env.GIT_TAG }}-macos"
+          echo "::set-env name=MACOS_FILENAME::$FILENAME"
+      - name: 'Package obs-rtspserver'
+        working-directory: ${{ github.workspace }}
+          mkdir -p build-package/obs-plugins/64bit
+          mkdir -p build-package/data/obs-plugins/obs-rtspserver/locale/
+          cp ./obs-studio/build64/plugins/obs-rtspserver/obs-rtspserver.so ./build-package/obs-plugins/64bit/
+          cp -r ./obs-studio/plugins/obs-rtspserver/data/* ./build-package/data/obs-plugins/obs-rtspserver/
+          mkdir release
+          zip -q -r "./release/${{ env.MACOS_FILENAME }}.zip" "./build-package/*"
+      - name: 'Publish ${{ env.MACOS_FILENAME }}.zip'
+        if: success()
+        uses: actions/upload-artifact@v2-preview
+        with:
+          name: '${{ env.GIT_TAG }}-macos'
+          path: ${{ github.workspace }}/release/*.zip
+            
   make-release:
     name: 'Upload release'
     runs-on: [ubuntu-latest]
-    needs: [windows, linux]
+    needs: [windows, linux, macos]
     steps:
       - name: 'Get the version'
         shell: bash
@@ -262,9 +339,13 @@ jobs:
         uses: actions/upload-release-asset@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: 'Upload macos .zip artifact to release'
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ github.event.release.upload_url }}
-          asset_path: ${{ github.workspace }}/${{ env.TAG_VERSION }}-linux/obs-rtspserver-${{ env.TAG_VERSION }}-linux.tar.gz
-          asset_name: obs-rtspserver-${{ env.TAG_VERSION }}-linux.tar.gz
-          asset_content_type: application/x-tar
+          asset_path: ${{ github.workspace }}/${{ env.TAG_VERSION }}-macos/obs-rtspserver-${{ env.TAG_VERSION }}-macos.zip
+          asset_name: obs-rtspserver-${{ env.TAG_VERSION }}-macos.zip
+          asset_content_type: application/zip
       
