--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -235,7 +235,6 @@ jobs:
       - name: 'Install prerequisite'
         run: |
             brew install ffmpeg x264 qt5 git
-            export QTDIR=/usr/local/opt/qt
       - name: 'Checkout OBS'
         uses: actions/checkout@v2
         with:
@@ -279,6 +278,8 @@ jobs:
         run: |
           mkdir ./build64
           cd ./build64
+          export QTDIR=/usr/local/opt/qt
+          ls /usr/local/opt/qt
           cmake ..
       - name: 'Build obs-rtspserver 64-bit'
         working-directory: ${{ github.workspace }}/obs-studio/build64/plugins/obs-rtspserver/
